# ogc-dimensions

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md
.memory/: decisions.md  inbox.md  patterns.md
docs/: GDC_SWG_FORMAL_SUBMISSION.md
docs/drafts/: gdc-swg-brief.md  ogc-naming-authority.md  stac-datacube-issue.md  stac-datacube-pr.md
paper/: appendix-deployed-dimensions.json  manuscript.md  references.bib  unwgic3-submission.md
reference-implementation/: Dockerfile  pyproject.toml
reference-implementation/src/ogc_dimensions/api/: app.py  routes.py
reference-implementation/src/ogc_dimensions/generators/: __init__.py  base.py  daily_period.py  dekadal.py  integer_range.py  pentadal.py  tree.py
reference-implementation/src/ogc_dimensions/providers/: __init__.py  base.py  daily_period.py  dekadal.py  integer_range.py  pentadal.py  tree.py
reference-implementation/tests/: test_api.py  test_daily_period.py  test_integer_range.py  test_records_conformance.py  test_tree.py
spec/building-blocks/: bblocks.json
spec/building-blocks/dimension-collection/: description.md  schema.json
spec/building-blocks/dimension-hierarchical/: description.md  schema.json
spec/building-blocks/dimension-inverse/: description.md  schema.json
spec/examples/: RESPONSES.md  admin-hierarchy.json  dekadal.json  indicator-tree.json  integer-range.json  legacy-bridge.json  pentadal.json
spec/schema/: dimension.json  generator.json  hierarchy.json  provider.json
testbed/: Dockerfile  pyproject.toml
testbed/api/: app.py  routes.py
testbed/generators/: integer_range.py
(+13 files in other folders)
