[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ogc-dimensions"
version = "1.0.0-rc.1"
description = "Reference implementation for OGC Dimensions: scalable dimension member generators for geospatial datacubes"
readme = "../README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    {name = "Carlo Cancellieri", email = "carlo.cancellieri@fao.org"},
]
keywords = ["ogc", "stac", "datacube", "dimensions", "dekadal", "pentadal", "geospatial"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.24",
    "ruff>=0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ogc_dimensions"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
